--- a/index.html
+++ b/index.html
@@ -9,31 +9,31 @@
 </head>
 <body>
 
-<div class = "fondo">
-  <div id = "tarjeta">
-            <img tittle src = "foto.jpg" id = "img1" >
-    <div class = "contenido">
+<div class="fondo">
+  <div id="tarjeta">
+            <img src="foto.jpg" id="img1" alt="profile picture">
+    <div class="contenido">
         <h1>Diego Herrada</h1>
         <a href="mailto:diegoherrada13@gmail.com" >
             <p title="Envíame un correo!">diegoherrada13@gmail.com</p>
         </a>
-        <p id = "developer"> Developer | Designer</p>
-        <div class = "íconos">
-          <div class = "fondo-social">
-            <a href = "https://github.com/Daiguito" target="_blank"><ion-icon class = "social" name="logo-github"></ion-icon></a>
+        <p id="developer">Developer | Designer</p>
+        <div clas="íconos">
+          <div class="fondo-social">
+            <a href="https://github.com/Daiguito" target="_blank"><ion-icon class="social" name="logo-github"></ion-icon></a>
           </div>
-          <div class = "fondo-social">
-            <a href = "https://twitter.com/PSDaiguito" target="_blank"><ion-icon class = "social" name="logo-twitter"></ion-icon></a>
+          <div class="fondo-social">
+            <a href="https://twitter.com/PSDaiguito" target="_blank"><ion-icon class="social" name="logo-twitter"></ion-icon></a>
           </div>
-          <div class = "fondo-social">
-            <a href = "https://www.youtube.com/channel/UCRJqqQxmD7ipbtrhs0_0D4A" target="_blank"><ion-icon class = "social" name="logo-youtube"></ion-icon></a>
+          <div class="fondo-social">
+            <a href="https://www.youtube.com/channel/UCRJqqQxmD7ipbtrhs0_0D4A" target="_blank"><ion-icon class="social" name="logo-youtube"></ion-icon></a>
           </div>
-          <div class = "fondo-social">
-            <a href = "https://www.linkedin.com/in/diego-herrada-alvarez-3413b2154/" target="_blank"><ion-icon class = "social" name="logo-linkedin"></ion-icon></a>
+          <div class="fondo-social">
+            <a href="https://www.linkedin.com/in/diego-herrada-alvarez-3413b2154/" target="_blank"><ion-icon class="social" name="logo-linkedin"></ion-icon></a>
           </div>
         </div>
     </div>
-    <div id = "seguidores">
+    <div id="seguidores">
     <Fotter>
     <p>120k followers | 10k following</p>
     </Fotter>
